--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .topo-container {
     display: flex;
@@ -70,6 +71,7 @@ body {
     border-radius: 9px;
     margin-top: 16px;
     margin-left: 20px;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
 }
 .option-container {
     padding: 18px 14px;
@@ -129,6 +131,18 @@ body {
 .button h1 {
     font-family: Roboto;
     font-weight: 400;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+
+.selecionado {
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
+}
+
+.botaoVerde {
+    background-color: #32B72F;
+    font-family: Roboto;
+    font-weight: 700;
     font-size: 20px;
     color: #FFFFFF;
 }
