--- a/style.css
+++ b/style.css
@@ -80,15 +80,17 @@ body {
     justify-content: space-between;
     width: 144px;
     height: 182px;
+    position: relative;
 }
-.option-container > img {
+.option-container > :first-child {
     width: 144px;
     height: 87px;
     border-radius: 4px;
 }
+
 .option-container > h1 {
     font-family: Roboto;
-    font-weight: 400;
+    font-weight: 700;
     font-size: 16px;
     color: #333333;
 }
@@ -98,7 +100,7 @@ body {
     font-size: 15px;
     color: #A6A6A6;
 }
-.option-container > h3 {
+.option-container h3 {
     font-family: Roboto;
     font-weight: 400;
     font-size: 16px;
@@ -137,6 +139,7 @@ body {
 
 .selecionado {
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
+    
 }
 
 .botaoVerde {
@@ -145,4 +148,17 @@ body {
     font-weight: 700;
     font-size: 20px;
     color: #FFFFFF;
+}
+
+.vector {
+    width: 15.44px;
+    height: 15.44px;
+    display: flex;
+    
+    position: absolute;
+    margin-left: 129px;
+    margin-top: 166px;
+}
+.escondido{
+    display: none;
 }
