--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     top: 0;
     left: 0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
 .topo-container {
     display: flex;
@@ -161,4 +162,7 @@ body {
 }
 .escondido{
     display: none;
+}
+.container {
+    
 }
